--- a/.github/workflows/mirror-repo-action-test.yml
+++ b/.github/workflows/mirror-repo-action-test.yml
@@ -28,6 +28,12 @@ jobs:
     name: Run test
     runs-on: ubuntu-latest
     steps:
+    - name: a Print pre-cache path
+        # 运行时展开为: ls -la /home/runner/work/git-mirror-sync/git-mirror-sync/hub-mirror-cache
+        run: |
+          pwd
+          ls -la
+          ls -la ${{ github.workspace }}
     - name: Checkout source codes
       uses: actions/checkout@v1
     - name: Mirror Github to Gitee with mirror-repo-action
@@ -39,3 +45,10 @@ jobs:
         source_repo: "git@github.com:wearerequired/git-mirror-action.git"
         # 需要同步到的目的仓库
         destination_repo: "git@gitee.com:kuxiade/git-mirror-action.git"
+    - name: a Print post-cache path
+        # 运行时展开为: ls -la /home/runner/work/git-mirror-sync/git-mirror-sync/hub-mirror-cache
+        run: |
+          pwd
+          ls -la
+          ls -la ${{ github.workspace }}
+          ls -la ${{ github.workspace }}/mirror-repo-cache
