--- a/.github/workflows/mirror-repo-action-cache-test.yml
+++ b/.github/workflows/mirror-repo-action-cache-test.yml
@@ -65,7 +65,7 @@ jobs:
         if: steps.cacheSrcRepos.outputs.cache-hit == 'true'
         run: echo "Cached successfully."
 
-      - name: Mirror Github to Gitee with mirror-repo-action
+      - name: Mirror Github:wearerequired/git-mirror-action to Gitee with mirror-repo-action
         uses: ./.
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
@@ -77,6 +77,21 @@ jobs:
           source_repo: "git@github.com:wearerequired/git-mirror-action.git"
           # 需要同步到的目的仓库
           destination_repo: "git@gitee.com:kuxiade/git-mirror-action.git"
+          # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          cache_path: /github/workspace/mirror-repo-cache
+
+      - name: Mirror Github:github/docs to Gitee with mirror-repo-action
+        uses: ./.
+        env:
+          # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
+        with:
+          # # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
+          # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
+          # 需要被同步的源端仓库
+          source_repo: "git@github.com:github/docs.git"
+          # 需要同步到的目的仓库
+          destination_repo: "git@gitee.com:kuxiade/github-docs.git"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
           cache_path: /github/workspace/mirror-repo-cache
 
