--- a/.github/workflows/mirror-repo-action-cache-test.yml
+++ b/.github/workflows/mirror-repo-action-cache-test.yml
@@ -70,8 +70,8 @@ jobs:
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
-          GITEE_TOKEN: ${{ secrets.GITEE_PERSONAL_ACCESS_TOKEN }}
-          HUB_ACCESS_TOKEN: ${{ secrets.HUB_PERSONAL_ACCESS_TOKEN }}
+          GITEE_ACCESS_TOKEN: ${{ secrets.GITEE_PERSONAL_ACCESS_TOKEN }}
+          GITHUB_ACCESS_TOKEN: ${{ secrets.HUB_PERSONAL_ACCESS_TOKEN }}
         with:
           # # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
