--- a/action.yml
+++ b/action.yml
@@ -14,16 +14,19 @@ inputs:
     required: true
     default: ''
   force_creat_dst_repo:
-    description: "If destination repo does not exist, force to create it."
+    description: "If destination repo does not exist, force to create it. must be true or false."
     default: false
   cache_path:
     description: "The path to cache the source repos code."
     default: '/github/workspace/mirror-repo-cache'
-  err_exit_flag:
-    description: "Exit immediately if a simple command exits with a non-zero status. (use 'set -e')"
+  request_tool:
+    description: "Tool for checking the existence of url for hub, must be git or curl."
+    default: 'git'
+  errexit_flag:
+    description: "Exit immediately if a simple command exits with a non-zero status, must be true or false. (use 'set -e', equivalent to 'set -o errexit')"
     default: true
-  debug_flag:
-    description: "Enable DEBUG for the script. (use 'set -x')"
+  xtrace_debug:
+    description: "Enable DEBUG for the script, must be true or false. (use 'set -x', equivalent to 'set -o xtrace')"
     default: false
 runs:
   using: 'docker'
@@ -33,5 +36,6 @@ runs:
     - ${{ inputs.dst_repo_url }}
     - ${{ inputs.force_creat_dst_repo}}
     - ${{ inputs.cache_path }}
-    - ${{ inputs.err_exit_flag }}
-    - ${{ inputs.debug_flag }}
+    - ${{ inputs.request_tool }}
+    - ${{ inputs.errexit_flag }}
+    - ${{ inputs.xtrace_debug }}
