--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -76,9 +76,9 @@ jobs:
           # # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
           # 需要被同步的源端仓库
-          src_repo_url: "git@github.com:wearerequired/git-mirror-action.git"
+          src_repo_url: "git@github.com:hlissner/doom-emacs.git"
           # 需要同步到的目的仓库
-          dst_repo_url: "git@gitee.com:kuxiade/git-mirror-action.git"
+          dst_repo_url: "git@gitee.com:kuxiade/doom-emacs.git"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
           cache_path: "/github/workspace/mirror-repo-cache"
           request_tool: "curl"
