--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -83,6 +83,21 @@ jobs:
           cache_path: "/github/workspace/mirror-repo-cache"
           request_tool: "curl"
 
+      - name: Mirror Github:github/docs to Gitee with hub-mirror-action
+        uses: ./.
+        env:
+          # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
+          SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
+        with:
+          # # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
+          # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
+          # 需要被同步的源端仓库
+          src_repo_url: "git@github.com:Yikun/hub-mirror-action.git"
+          # 需要同步到的目的仓库
+          dst_repo_url: "git@gitee.com:kuxiade/hub-mirror-action.git"
+          # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          cache_path: /github/workspace/mirror-repo-cache
+
       - name: Mirror Github:github/docs to Gitee with repo-sync-action
         uses: ./.
         env:
