--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -123,10 +123,10 @@ jobs:
           # ssh_private_key: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
           # 需要被同步的源端仓库
           src_repo_url: "git@github.com:microsoft/vscode-dev-containers.git"
-          src_repo_branch: "bowdenk7"
+          src_repo_branch: "refs/remotes/origin/bowdenk7"
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/vscode-dev-containers.git"
-          dst_repo_branch: "HEAD"
+          dst_repo_branch: "refs/heads/HEAD"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
           cache_path: /github/workspace/mirror-repo-cache
 
