--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -126,7 +126,7 @@ jobs:
           src_repo_branch: "refs/remotes/origin/bowdenk7"
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/vscode-dev-containers.git"
-          dst_repo_branch: "refs/heads/HEAD"
+          dst_repo_branch: "refs/heads/csharp-update"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
           cache_path: /github/workspace/mirror-repo-cache
 
