--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -124,7 +124,7 @@ jobs:
           # 需要被同步的源端仓库
           src_repo_url: "git@github.com:microsoft/vscode-dev-containers.git"
           #src_repo_branch: "refs/remotes/origin/bowdenk7"
-          src_repo_tag: ""
+          src_repo_tag: "v0.150.0"
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/vscode-dev-containers.git"
           #dst_repo_branch: "refs/heads/csharp-update"
