--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -84,6 +84,7 @@ jobs:
           request_tool: "curl"
 
       - name: Mirror Github:microsoft/vscode-dev-containers to Gitee with repo-sync-action
+        # 将 continue-on-error 设置为 true，表示即使当前 step 报错，后续的 steps 也能继续执行。
         continue-on-error: true
         uses: ./.
         env:
