--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -75,9 +75,12 @@ jobs:
           echo ""
           echo "ls -la" ${{ github.workspace }}
           ls -la ${{ github.workspace }}
+          echo ""
+          echo "ls -la" ${{ github.workspace }}/mirror-repo-cache
+          ls -la ${{ github.workspace }}/mirror-repo-cache
 
       - name: Mirror Github:wearerequired/git-mirror-action to Gitee with repo-sync-action
-        uses: ./.
+        uses: ./
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
@@ -97,7 +100,7 @@ jobs:
       - name: Mirror Github:microsoft/vscode-dev-containers to Gitee with repo-sync-action
         # 将 continue-on-error 设置为 true，表示即使当前 step 报错，后续的 steps 也能继续执行。
         continue-on-error: true
-        uses: ./.
+        uses: ./
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
@@ -116,7 +119,7 @@ jobs:
           cache_path: /github/workspace/mirror-repo-cache
 
       - name: Mirror Github:Yikun/hub-mirror-action to Gitee with repo-sync-action
-        uses: ./.
+        uses: ./
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
@@ -131,7 +134,7 @@ jobs:
           cache_path: /github/workspace/mirror-repo-cache
 
       - name: Mirror Github:github/docs to Gitee with repo-sync-action
-        uses: ./.
+        uses: ./
         env:
           # 用于目的端上传代码的SSH key，用于从gituhb虚拟机上传代码到目的端仓库。
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_SSH_KEY }}
