--- a/.github/workflows/repo-sync-action-cache-test.yml
+++ b/.github/workflows/repo-sync-action-cache-test.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: a Print pre-cache path
-        # 运行时展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+        # 此时还没有取回上一次的缓存到指定的 'steps.cacheSrcRepos.with.path' 中
         run: |
           echo "ls -la" $PWD
           ls -la
@@ -67,8 +67,9 @@ jobs:
         if: steps.cacheSrcRepos.outputs.cache-hit == 'true'
         run: echo "Cached successfully."
 
-      - name: b Print pre-cache path
-        # 运行时展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+      - name: b Print post-cache path - Last time cache
+        # 此时已经取回了上一次的缓存到指定的 'steps.cacheSrcRepos.with.path' 中
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
         run: |
           echo "ls -la" $PWD
           ls -la
@@ -94,6 +95,7 @@ jobs:
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/doom-emacs.git"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          # 'cache_path' 与 'steps.cacheSrcRepos.with.path' 值保持一致
           cache_path: "/github/workspace/mirror-repo-cache"
           request_tool: "curl"
 
@@ -116,6 +118,7 @@ jobs:
           #dst_repo_branch: "refs/heads/csharp-update"
           dst_repo_tag: "v0.150.0"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          # 'cache_path' 与 'steps.cacheSrcRepos.with.path' 值保持一致
           cache_path: /github/workspace/mirror-repo-cache
 
       - name: Mirror Github:Yikun/hub-mirror-action to Gitee with repo-sync-action
@@ -131,6 +134,7 @@ jobs:
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/hub-mirror-action.git"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          # 'cache_path' 与 'steps.cacheSrcRepos.with.path' 值保持一致
           cache_path: /github/workspace/mirror-repo-cache
 
       - name: Mirror Github:github/docs to Gitee with repo-sync-action
@@ -146,10 +150,13 @@ jobs:
           # 需要同步到的目的仓库
           dst_repo_url: "git@gitee.com:kuxiade/github-docs.git"
           # cache_path (optional) 将代码缓存在指定目录，用于与actions/cache配合以加速镜像过程。
+          # 'cache_path' 与 'steps.cacheSrcRepos.with.path' 值保持一致
           cache_path: /github/workspace/mirror-repo-cache
 
-      - name: c Print post-cache path
-        # 运行时展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+      - name: c Print post-cache path - This time cache
+        # 本次缓存（可能包含有仓库更新的内容），也就是 'steps.cacheSrcRepos.with.path' 中的所有内容，
+        # 在下一次执行该工作流时，其会作为缓存。被取回到指定的 'steps.cacheSrcRepos.with.path' 中
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
         run: |
           echo "ls -la" $PWD
           ls -la
