--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -84,7 +84,7 @@ jobs:
           ls -la ${{ github.workspace }}
           echo ""
           echo "ls -la" ${{ github.workspace }}/mirror-repo-cache
-          ls -la ${{ github.workspace }}/mirror-repo-cache
+          ls -la ${{ github.workspace }}/mirror-repo-cache || exit 0
 
       - name: Mirror docs
         uses: ./
@@ -152,7 +152,7 @@ jobs:
           ls -la ${{ github.workspace }}
           echo ""
           echo "ls -la" ${{ github.workspace }}/mirror-repo-cache
-          ls -la ${{ github.workspace }}/mirror-repo-cache
+          ls -la ${{ github.workspace }}/mirror-repo-cache || exit 0
 
 
   job2:
@@ -214,7 +214,7 @@ jobs:
           ls -la ${{ github.workspace }}
           echo ""
           echo "ls -la" ${{ github.workspace }}/mirror-repo-cache
-          ls -la ${{ github.workspace }}/mirror-repo-cache
+          ls -la ${{ github.workspace }}/mirror-repo-cache || exit 0
 
       - name: Mirror doom-emacs
         uses: ./
@@ -404,4 +404,4 @@ jobs:
           ls -la ${{ github.workspace }}
           echo ""
           echo "ls -la" ${{ github.workspace }}/mirror-repo-cache
-          ls -la ${{ github.workspace }}/mirror-repo-cache
+          ls -la ${{ github.workspace }}/mirror-repo-cache || exit 0
