--- a/.github/workflows/github-to-gitee.yml
+++ b/.github/workflows/github-to-gitee.yml
@@ -46,28 +46,29 @@ jobs:
       - name: Checkout source codes
         uses: actions/checkout@v1
 
-      - name: Get repo and time
-        id: someInfo
+      - name: Get Time info
+        id: getTime
+        run: |
+          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d%H%M%S")"
+        shell: bash
+
+      - name: Get Repo info
+        id: getRepo
         uses: actions/github-script@v3
         with:
-          result-encoding: string
           script: |
-            core.setOutput('ownerRepoInfo', `${context.repo.owner}-${context.repo.repo}`);
-            core.setOutput('timeInfo', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
-            return context.repo.repo;
+            core.setOutput('ownerRepo', `${context.repo.owner}-${context.repo.repo}`);
       
       - name: Cache src repos with actions/cache
         uses: actions/cache@v2
         id: cacheSrcRepos
         with:
-          # 运行时 path 展开为: /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+          # ${{ github.workspace }} 展开为: /home/runner/work/repo-sync-action/repo-sync-action
+          # ${{ github.job }} 展开为: <job_id>
+          # 运行时 path 展开为: /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
           path: ${{ github.workspace }}/${{ github.job }}-cache
-          key: ${{ runner.os }}-${{ github.repository_owner }}-${{ steps.someInfo.outputs.result }}-${{ github.job }}-cache-${{ steps.someInfo.outputs.timeInfo }}
-          # or
-          # key: ${{ runner.os }}-${{ steps.someInfo.outputs.ownerRepoInfo }}-cache-${{ steps.someInfo.outputs.timeInfo }}
-          restore-keys: ${{ runner.os }}-${{ github.repository_owner }}-${{ steps.someInfo.outputs.result }}-${{ github.job }}-cache-
-          # or
-          # restore-keys: ${{ runner.os }}-${{ steps.someInfo.outputs.ownerRepoInfo }}-cache-
+          key: ${{ runner.os }}-${{ steps.getRepo.outputs.ownerRepo }}-${{ github.job }}-cache-${{ steps.getTime.outputs.date }}
+          restore-keys: ${{ runner.os }}-${{ steps.getRepo.outputs.ownerRepo }}-${{ github.job }}-cache-
 
       - name: Print the cache status
         if: steps.cacheSrcRepos.outputs.cache-hit == 'true'
@@ -75,7 +76,7 @@ jobs:
 
       - name: b Print post-cache path - Last time cache
         # 此时已经取回了上一次的缓存到指定的 'steps.cacheSrcRepos.with.path' 中
-        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
         run: |
           echo "ls -la" $PWD
           ls -la
@@ -143,7 +144,7 @@ jobs:
       - name: c Print post-cache path - This time cache
         # 本次缓存（可能包含有仓库更新的内容），也就是 'steps.cacheSrcRepos.with.path' 中的所有内容，
         # 在下一次执行该工作流时，其会作为缓存。被取回到指定的 'steps.cacheSrcRepos.with.path' 中
-        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
         run: |
           echo "ls -la" $PWD
           ls -la
@@ -190,7 +191,9 @@ jobs:
         uses: actions/cache@v2
         id: cacheSrcRepos
         with:
-          # 运行时 path 展开为: /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+          # ${{ github.workspace }} 展开为: /home/runner/work/repo-sync-action/repo-sync-action
+          # ${{ github.job }} 展开为: <job_id>
+          # 运行时 path 展开为: /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
           path: ${{ github.workspace }}/${{ github.job }}-cache
           key: ${{ runner.os }}-${{ github.repository_owner }}-${{ steps.someInfo.outputs.result }}-${{ github.job }}-cache-${{ steps.someInfo.outputs.timeInfo }}
           # or
@@ -205,7 +208,7 @@ jobs:
 
       - name: b Print post-cache path - Last time cache
         # 此时已经取回了上一次的缓存到指定的 'steps.cacheSrcRepos.with.path' 中
-        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
         run: |
           echo "ls -la" $PWD
           ls -la
@@ -395,7 +398,7 @@ jobs:
       - name: c Print post-cache path - This time cache
         # 本次缓存（可能包含有仓库更新的内容），也就是 'steps.cacheSrcRepos.with.path' 中的所有内容，
         # 在下一次执行该工作流时，其会作为缓存。被取回到指定的 'steps.cacheSrcRepos.with.path' 中
-        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/mirror-repo-cache
+        # 运行时缓存路径展开为: ls -la /home/runner/work/repo-sync-action/repo-sync-action/<job_id>-cache
         run: |
           echo "ls -la" $PWD
           ls -la
